# supernote-kathimerini

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  daily.yml
supernote_kathimerini/: __init__.py  __main__.py  scrap.py  upload.py
